Added: css to change color of text and layout of the paragraphs

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>First Project</title>
+        <link rel="stylesheet" href="css/homework2.css">
     </head>
     <body>
         <h1>My First Project</h1>
