--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <title>First Project</title>
         <link rel="stylesheet" href="css/homework2.css">
+        <link rel="stylesheet" href="css/bluetheme.css">
     </head>
     <body>
         <h1>My First Project</h1>
