Update: created new folders for css and js and then moves the css files into the css folder and created a new js file for the js folder

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <title>First Project</title>
         <link rel="stylesheet" href="css/homework2.css">
         <link rel="stylesheet" href="css/bluetheme.css">
+        <script src="js/homework2.js"></script>
     </head>
     <body>
         <h1>My First Project</h1>
