Added an event in js and changed the cursor style in css

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
         <title>First Project</title>
         <link rel="stylesheet" href="css/homework2.css">
         <link rel="stylesheet" href="css/bluetheme.css">
-        <script src="js/homework2.js"></script>
     </head>
     <body>
         <h1>My First Project</h1>
         <h2>This is going to be cool...</h2>
-        <p>It is a simple webpage with a title and some text.</p>
-        <p>We are learning how to create a simple HTML page.</p>
-        <p>We are using a code editor to write our HTML code.</p>
+        <p id="first-paragraph">It is a simple webpage with a title and some text.</p>
+        <p id="second-paragraph">We are learning how to create a simple HTML page.</p>
+        <p id="third-paragraph">We are using a code editor to write our HTML code.</p>
+        <script src="js/homework2.js"></script>
     </body>
 </html>
