Added: a hero section and images

--- a/index.html
+++ b/index.html
@@ -5,11 +5,21 @@
         <link rel="stylesheet" href="css/bluetheme.css">
     </head>
     <body>
+
+        <section id="hero" style="text-align: center; padding: 50px; background-color: #f0f0f0;">
+            <h1 style="font-size: 3em; margin-bottom: 10px;">Welcome to the Future of AI</h1>
+            <h2 style="font-size: 1.5em; color: #555;">Explore the possibilities of artificial intelligence</h2>
+            <div style="margin-top: 20px">
+                <img src="images/ai-image1.jpg" alt="AI Image 1">
+                <img src="images/ai-image2.jpg" alt="AI Image 2">
+            </div>
+        </section>
         <h1>My First Project</h1>
         <h2>This is going to be cool...</h2>
         <p id="first-paragraph">It is a simple webpage with a title and some text.</p>
         <p id="second-paragraph">We are learning how to create a simple HTML page.</p>
         <p id="third-paragraph">We are using a code editor to write our HTML code.</p>
+        <img src="images/ai-image3.jpg" alt="AI Image 3">
         <script src="js/homework2.js"></script>
     </body>
 </html>
