--- a/index.html
+++ b/index.html
@@ -7,19 +7,20 @@
     <body>
 
         <section id="hero" style="text-align: center; padding: 50px; background-color: #f0f0f0;">
-            <h1 style="font-size: 3em; margin-bottom: 10px;">Welcome to the Future of AI</h1>
-            <h2 style="font-size: 1.5em; color: #555;">Explore the possibilities of artificial intelligence</h2>
+            <h1 style="font-size: 3em; margin-bottom: 10px;">Welcome to the Heart of NYC</h1>
+            <h2 style="font-size: 1.5em; color: #555;">Skyscrapers, subways, and stories</h2>
             <div style="margin-top: 20px">
                 <img src="images/ai-image1.jpg" alt="AI Image 1">
                 <img src="images/ai-image2.jpg" alt="AI Image 2">
             </div>
         </section>
-        <h1>My First Project</h1>
-        <h2>This is going to be cool...</h2>
-        <p id="first-paragraph">It is a simple webpage with a title and some text.</p>
-        <p id="second-paragraph">We are learning how to create a simple HTML page.</p>
-        <p id="third-paragraph">We are using a code editor to write our HTML code.</p>
-        <img src="images/ai-image3.jpg" alt="AI Image 3">
-        <script src="js/homework2.js"></script>
-    </body>
-</html>
+        <h1>My First NYC Page</h1>
+        <h2>A small tribute to the city that never sleeps......</h2>
+        <p id="first-paragraph">This page showcases a few snapshots from my adventures around New York.</p>
+        <p id="second-paragraph">I'm exploring places like Central Park, the Brooklyn Bridge, and local cafés.</p>
+        <p id="third-paragraph">Stay tuned for updates with new pictures and hidden gems across the boroughs.</p>
+        <img src="pictures/NYC picture.jpg" alt="NYC Image" style="width: 50%; height: auto; display: block; margin: auto;">
+        <script src="js/homework2.js"></script>ript src="js/homework2.js"></script>
+    </body>ody>
+
+</html></html>
