--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
         <link rel="stylesheet" href="css/bluetheme.css">
     </head>
     <body>
+        <header style="text-align: center; padding: 20px;">
+            <img src="pictures/NYC logo.png" alt="NYC Logo" style="height: 60px;">
+            <h1 style="margin: 10px 0; font-size: 80%; color: blue;">Discover New York City 🗽</h1>
+        </header>
 
         <section id="hero" style="text-align: center; padding: 50px; background-color: #f0f0f0;">
-            <h1 style="font-size: 3em; margin-bottom: 10px;">Welcome to the Heart of NYC</h1>
+            <h1 style="font-size: 3em; margin-bottom: 10px; color: red">Welcome to the Heart of NYC</h1>
             <h2 style="font-size: 1.5em; color: #555;">Skyscrapers, subways, and stories</h2>
             <div style="margin-top: 20px">
                 <img src="images/ai-image1.jpg" alt="AI Image 1">
