Added: more images and enhanced the appearance of the page

--- a/index.html
+++ b/index.html
@@ -3,28 +3,45 @@
         <title>First Project</title>
         <link rel="stylesheet" href="css/homework2.css">
         <link rel="stylesheet" href="css/bluetheme.css">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     </head>
-    <body>
-        <header style="text-align: center; padding: 20px;">
+    <body style="font-family: 'Roboto', sans-serif; line-height: 1.6; margin: 0; padding: 0;">
+
+        <header style="text-align: center; padding: 20px; background-color: #003366; color: white;">
             <img src="pictures/NYC logo.png" alt="NYC Logo" style="height: 60px;">
-            <h1 style="margin: 10px 0; font-size: 80%; color: blue;">Discover New York City 🗽</h1>
+            <h1 style="margin: 10px 0; font-size: 2em;">Discover New York City 🗽</h1>
         </header>
 
         <section id="hero" style="text-align: center; padding: 50px; background-color: #f0f0f0;">
-            <h1 style="font-size: 3em; margin-bottom: 10px; color: red">Welcome to the Heart of NYC</h1>
+            <h1 style="font-size: 2.5em; margin-bottom: 10px; color: #003366;">Welcome to the Heart of NYC</h1>
             <h2 style="font-size: 1.5em; color: #555;">Skyscrapers, subways, and stories</h2>
             <div style="margin-top: 20px">
-                <img src="images/ai-image1.jpg" alt="AI Image 1">
-                <img src="images/ai-image2.jpg" alt="AI Image 2">
+                <img src="pictures/Central Park.jpg" alt="NYC Image 1" style="width: 45%; margin: 10px;">
+                <img src="pictures/NYC at night.avif" alt="NYC Image 2" style="width: 45%; margin: 10px;">
             </div>
         </section>
-        <h1>My First NYC Page</h1>
-        <h2>A small tribute to the city that never sleeps......</h2>
-        <p id="first-paragraph">This page showcases a few snapshots from my adventures around New York.</p>
-        <p id="second-paragraph">I'm exploring places like Central Park, the Brooklyn Bridge, and local cafés.</p>
-        <p id="third-paragraph">Stay tuned for updates with new pictures and hidden gems across the boroughs.</p>
-        <img src="pictures/NYC picture.jpg" alt="NYC Image" style="width: 50%; height: auto; display: block; margin: auto;">
-        <script src="js/homework2.js"></script>ript src="js/homework2.js"></script>
-    </body>ody>
 
-</html></html>
+        <main style="padding: 20px; max-width: 800px; margin: auto;">
+            <article style="margin-bottom: 30px;">
+                <h1 style="font-size: 2em; color: #003366;">My First NYC Page</h1>
+                <h2 style="font-size: 1.2em; color: #666;">A small tribute to the city that never sleeps...</h2>
+                <div class="styled-paragraph">
+                    <p id="first-paragraph">This page showcases a few snapshots from my adventures around New York.</p>
+                </div>
+                <div class="styled-paragraph">
+                    <p id="second-paragraph">I'm exploring places like Central Park, the Brooklyn Bridge, and local cafés.</p>
+                </div>
+                <div class="styled-paragraph">
+                    <p id="third-paragraph">Stay tuned for updates with new pictures and hidden gems across the boroughs.</p>
+                </div>
+            </article>
+            <img src="pictures/NYC picture.jpg" alt="NYC Image 3" style="width: 80%; height: auto; display: block; margin: auto; border: 5px solid #003366; border-radius: 10px;">
+        </main>
+
+        <footer style="text-align: center; padding: 20px; background-color: #003366; color: white;">
+            <p>&copy; 2025 NYC Blog. All rights reserved.</p>
+        </footer>
+
+        <script src="js/homework2.js"></script>
+    </body>
+</html>
