Added: further enhanced the appearance and added qbix colors to header

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body style="font-family: 'Roboto', sans-serif; line-height: 1.6; margin: 0; padding: 0;">
 
-        <header style="text-align: center; padding: 20px; background-color: #003366; color: white;">
+        <header style="text-align: center; padding: 20px; background: linear-gradient(90deg, #003366, #00aaff); color: white;">
             <img src="pictures/NYC logo.png" alt="NYC Logo" style="height: 60px;">
             <h1 style="margin: 10px 0; font-size: 2em;">Discover New York City 🗽</h1>
         </header>
@@ -25,15 +25,9 @@
             <article style="margin-bottom: 30px;">
                 <h1 style="font-size: 2em; color: #003366;">My First NYC Page</h1>
                 <h2 style="font-size: 1.2em; color: #666;">A small tribute to the city that never sleeps...</h2>
-                <div class="styled-paragraph">
-                    <p id="first-paragraph">This page showcases a few snapshots from my adventures around New York.</p>
-                </div>
-                <div class="styled-paragraph">
-                    <p id="second-paragraph">I'm exploring places like Central Park, the Brooklyn Bridge, and local cafés.</p>
-                </div>
-                <div class="styled-paragraph">
-                    <p id="third-paragraph">Stay tuned for updates with new pictures and hidden gems across the boroughs.</p>
-                </div>
+                <p id="first-paragraph">This page showcases a few snapshots from my adventures around New York.</p>
+                <p id="second-paragraph">I'm exploring places like Central Park, the Brooklyn Bridge, and local cafés.</p>
+                <p id="third-paragraph">Stay tuned for updates with new pictures and hidden gems across the boroughs.</p>
             </article>
             <img src="pictures/NYC picture.jpg" alt="NYC Image 3" style="width: 80%; height: auto; display: block; margin: auto; border: 5px solid #003366; border-radius: 10px;">
         </main>
